tests/ui/parser/mismatched-delimiter-corner-case-issue-127868.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/mismatched-delimiter-corner-case-issue-127868.rs:5:42
   |
LL | fn main() {
   |           - closing delimiter possibly meant for this
LL |     let a = [[[[[[[[[[[[[[[[[[[[1, {, (, [,;
   |                                          ^ unclosed delimiter
LL | }
   | ^ mismatched closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/mismatched-delimiter-corner-case-issue-127868.rs:7:51
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     let a = [[[[[[[[[[[[[[[[[[[[1, {, (, [,;
   |             --------------------   - this delimiter might not be properly closed...
   |             ||||||||||||||||||||
   |             |||||||||||||||||||unclosed delimiter
   |             ||||||||||||||||||unclosed delimiter
   |             |||||||||||||||||unclosed delimiter
   |             ||||||||||||||||unclosed delimiter
   |             |||||||||||||||unclosed delimiter
   |             ||||||||||||||unclosed delimiter
   |             |||||||||||||unclosed delimiter
   |             ||||||||||||unclosed delimiter
   |             |||||||||||unclosed delimiter
   |             ||||||||||unclosed delimiter
   |             |||||||||unclosed delimiter
   |             ||||||||unclosed delimiter
   |             |||||||unclosed delimiter
   |             ||||||unclosed delimiter
   |             |||||unclosed delimiter
   |             ||||unclosed delimiter
   |             |||unclosed delimiter
   |             ||unclosed delimiter
   |             |unclosed delimiter
   |             unclosed delimiter
LL | }
   | - ...as it matches this but it has different indentation
LL |
   |                                                   ^

error: aborting due to 2 previous errors

